2011-07-03  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Dell-3000cn.xml, driver/pxlcolor.xml,
	  opt/pxlmono-PrinterResolution.xml: Added new printer Dell 3000cn.
	  working with the "pxlcolor" driver. Thanks to Albert Pool
	  (albertpool at solcon dot nl).

2011-06-30  Lovely Kim Salvo-Nunez <lsalvo@lexmark.com>

        * PPD/Lexmark/Lexmark_6500e_Series.ppd,
	  PPD/Lexmark/Lexmark_C950_Series.ppd,
	  PPD/Lexmark/Lexmark_X950_Series.ppd,
	  PPD/Lexmark/Lexmark_X548_Series.ppd: Uploaded Lexmark PPD Files

2011-06-28  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/Postscript.xml, driver/hplip.xml, driver/laserjet.xml,
	  driver/lj4dith.xml, driver/lj5gray.xml, driver/ljet4.xml,
	  driver/ljet4d.xml, driver/ptouch.xml, driver/pxlmono.xml,
	  printer/Apple-LaserWriter_IINTX.xml,
	  printer/Apple-LaserWriter_NT.xml, printer/Canon-S330_Photo.xml,
	  printer/Epson-EM_900CN.xml, printer/Epson-EM_930CN.xml,
	  printer/Epson-PM_820C.xml, printer/Epson-Stylus_Photo_1290.xml,
	  printer/Epson-Stylus_Photo_1290S.xml, printer/Infotec-4651_MF.xml,
	  printer/Oki-B2200.xml, printer/Ricoh-Aficio_AP2000.xml: Many printers
	  had a recommended driver which was not one of the driver listed as
	  supporting this printer, neither in the driver's printer list nor
	  in the printer's driver list. Fixed all these inconsistencies.
	  Thanks to Daniel Dressler (danieru dot dressler at gmail
	  dot com) for reporting the problem and supplying the printer list.

2011-06-26  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Epson-LX-300plus.xml, driver/ibmpro.xml, driver/epson.xml:
	  Added the Epson LX-300+ (Ubuntu bug #776326).

	* opt/68.xml: Renamed option name "Paper type" to standard
	  form "Media Type".

2011-06-16  Till Kamppeter <till.kamppeter@gmail.com>

	* opt/161.xml, opt/190.xml, opt/PCL-4-5-InputSlot.xml,
	  opt/PCL-XL-InputSlot.xml, opt/Postscript-InputSlot.xml:
	  Renamed choices of the manufacturer-independent "InputSlot" options