@@ -1,0 +1,48 @@
+<printer id="printer/Lexmark-X950">
+  <make>Lexmark</make>
+  <model>X950</model>
+  <mechanism>
+    <color />
+    <resolution>
+      <dpi>
+        <x>1200</x>
+        <y>1200</y>
+      </dpi>
+    </resolution>
+  </mechanism>
+  <lang>
+    <postscript level="3" />
+    <pjl />
+  </lang>
+  <autodetect>
+    <general>
+      <ieee1284>MFG:Lexmark;MDL:Lexmark X950;</ieee1284>
+      <manufacturer>Lexmark</manufacturer>
+      <model>Lexmark X950</model>
+    </general>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>Postscript-Lexmark</driver>
+  <drivers>
+    <driver>
+      <id>Postscript</id>
+    </driver>
+    <driver>
+      <id>Postscript-Lexmark</id>
+      <ppd>PPD/Lexmark/Lexmark_X950_Series.ppd</ppd>
+    </driver>
+  </drivers>
+  <comments>
+    <en>
+      This database entry was automatically generated
+      from the PPD file for this printer.&lt;p&gt;
+
+      Maximum paper width: 11.7 inches / 29.7 cm
+      (Wide format printer)&lt;p&gt;
+
+      Printing engine speed: 36 pages/min&lt;p&gt;
+
+
+    </en>
+  </comments>
+</printer>
