@@ -1,5 +1,10 @@
 2011-07-03  Till Kamppeter <till.kamppeter@gmail.com>
 
+	* printer/Lexmark-6500e.xml, printer/Lexmark-C950.xml,
+	  printer/Lexmark-X548.xml, printer/Lexmark-X950.xml,
+	  printer/Lexmark-X952.xml, printer/Lexmark-X954.xml: Added
+	  XML entries for the new PPD files from Lexmark.
+
 	* printer/Dell-3000cn.xml, driver/pxlcolor.xml,
 	  opt/pxlmono-PrinterResolution.xml: Added new printer Dell 3000cn.
 	  working with the "pxlcolor" driver. Thanks to Albert Pool
